syntax = "proto2";

package Gazillion;

import "PubSubProtocol.proto";

enum FrontendProtocolVersion {
	CURRENT_VERSION	= 1;
}

message LoginDataPB {
	required string	emailAddress	= 1;
	required string	password	= 2;
	optional string	version	= 3;
	optional string	dbservername	= 4;
	optional string	token	= 5;
	optional bool	loginAsAnotherPlayer	= 6;
	optional bool	noPersistenceThisSession	= 7;
	optional string	loginAsPlayer	= 8;
	optional string	clientDownloader	= 9;
	optional string	machineId	= 10;
}

message InitialClientHandshake {
	required FrontendProtocolVersion	protocolVersion	= 1 [default = CURRENT_VERSION];
	required PubSubServerTypes	serverType	= 2;
}

message ClientCredentials {
	required uint64	sessionid	= 1;
	required bytes	iv	= 2;
	required bytes	encryptedToken	= 3;
}

message LoginQueueStatus {
	required uint64	placeInLine	= 1;
	required uint64	numberOfPlayersInLine	= 2;
}

message SessionEncryptionChanged {
	required uint32	randomNumberIndex	= 1 [default = 1];
	required bytes	encryptedRandomNumber	= 2;
}

message EncryptedTrafficHeader {
	required uint32	randomNumberIndex	= 1;
	required bytes	encryptedTraffic	= 2;
}

